added converter from algebraic notation to start-end notation, processer that converts scraped data to gameplay, and a small class to compare engines to the oracle

--- a/framework/antiscratch.ipynb
+++ b/framework/antiscratch.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:3c83a677031b4b7f3f73e669b98f8922ff119b8f418aa68161aa4b59fcb9714f"
+  "signature": "sha256:70146268d13b4233eddd793c4ed23e7659622d0c16a53c9e6183528eb1c3f0cc"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -234,6 +234,318 @@
        "stream": "stdout",
        "text": [
         "p\n"
+       ]
+      }
+     ],
+     "prompt_number": 2
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "x = \"exd6e.p.\"\n",
+      "print x[-4]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "e\n"
+       ]
+      }
+     ],
+     "prompt_number": 4
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "alg = 'f8=Q'\n",
+      "print alg[-2:]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "=Q\n"
+       ]
+      }
+     ],
+     "prompt_number": 11
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print 'A'.islower()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "False\n"
+       ]
+      }
+     ],
+     "prompt_number": 13
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# from Move import *\n",
+      "from Board import Board\n",
+      "b = Board()\n",
+      "move = b.algebraic_to_se(\"e4\")\n",
+      "print move.move_to_str()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "e2e4\n"
+       ]
+      }
+     ],
+     "prompt_number": 2
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print 1 in [1, 2, 3]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "True\n"
+       ]
+      }
+     ],
+     "prompt_number": 2
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "l = [(1, 2), (3, 4)]\n",
+      "print [item for sublist in l for item in sublist if item != 3]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[1, 2, 4]\n"
+       ]
+      }
+     ],
+     "prompt_number": 14
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "for i in range(10) if not 5:\n",
+      "    print i"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "ename": "SyntaxError",
+       "evalue": "invalid syntax (<ipython-input-13-d094eed96299>, line 1)",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-13-d094eed96299>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    for i in range(10) if not 5:\u001b[0m\n\u001b[0m                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+       ]
+      }
+     ],
+     "prompt_number": 13
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "python game_parser.py"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "ename": "SyntaxError",
+       "evalue": "invalid syntax (<ipython-input-15-85701318cce5>, line 1)",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-15-85701318cce5>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    python game_parser.py\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+       ]
+      }
+     ],
+     "prompt_number": 15
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "from GameProcessor import GameProcessor\n",
+      "moves = [(\"e4\", \"e5\"), (\"Nf3\", \"Nc6\"), (\"Nxe5\", \"Nxe5\")]\n",
+      "\n",
+      "gpr = GameProcessor(moves)\n",
+      "gpr.simulate_game()\n",
+      "for position in gpr.positions:\n",
+      "    print position"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        " R   N   B   K   Q   B   N   R  \n",
+        "\n",
+        " P   P   P   P   P   P   P   P  \n",
+        "\n",
+        " .   .   .   .   .   .   .   .  \n",
+        "\n",
+        " .   .   .   .   .   .   .   .  \n",
+        "\n",
+        " .   .   .   .   .   .   .   .  \n",
+        "\n",
+        " .   .   .   .   .   .   .   .  \n",
+        "\n",
+        " p   p   p   p   p   p   p   p  \n",
+        "\n",
+        " r   n   b   k   q   b   n   r  \n",
+        "\n",
+        "\n",
+        "\n",
+        " R   N   B   K   Q   B   N   R  \n",
+        "\n",
+        " P   P   P   .   P   P   P   P  \n",
+        "\n",
+        " .   .   .   .   .   .   .   .  \n",
+        "\n",
+        " .   .   .   P   .   .   .   .  \n",
+        "\n",
+        " .   .   .   .   .   .   .   .  \n",
+        "\n",
+        " .   .   .   .   .   .   .   .  \n",
+        "\n",
+        " p   p   p   p   p   p   p   p  \n",
+        "\n",
+        " r   n   b   k   q   b   n   r  \n",
+        "\n",
+        "\n",
+        "\n",
+        " R   N   B   K   Q   B   N   R  \n",
+        "\n",
+        " P   P   P   .   P   P   P   P  \n",
+        "\n",
+        " .   .   .   .   .   .   .   .  \n",
+        "\n",
+        " .   .   .   P   .   .   .   .  \n",
+        "\n",
+        " .   .   .   p   .   .   .   .  \n",
+        "\n",
+        " .   .   .   .   .   .   .   .  \n",
+        "\n",
+        " p   p   p   .   p   p   p   p  \n",
+        "\n",
+        " r   n   b   k   q   b   n   r  \n",
+        "\n",
+        "\n",
+        "\n",
+        " R   .   B   K   Q   B   N   R  \n",
+        "\n",
+        " P   P   P   .   P   P   P   P  \n",
+        "\n",
+        " .   .   N   .   .   .   .   .  \n",
+        "\n",
+        " .   .   .   P   .   .   .   .  \n",
+        "\n",
+        " .   .   .   p   .   .   .   .  \n",
+        "\n",
+        " .   .   .   .   .   .   .   .  \n",
+        "\n",
+        " p   p   p   .   p   p   p   p  \n",
+        "\n",
+        " r   n   b   k   q   b   n   r  \n",
+        "\n",
+        "\n",
+        "\n",
+        " R   .   B   K   Q   B   N   R  \n",
+        "\n",
+        " P   P   P   .   P   P   P   P  \n",
+        "\n",
+        " .   .   N   .   .   .   .   .  \n",
+        "\n",
+        " .   .   .   P   .   .   .   .  \n",
+        "\n",
+        " .   .   .   p   .   .   .   .  \n",
+        "\n",
+        " .   .   .   .   .   n   .   .  \n",
+        "\n",
+        " p   p   p   .   p   p   p   p  \n",
+        "\n",
+        " r   n   b   k   q   b   .   r  \n",
+        "\n",
+        "\n",
+        "\n",
+        " R   .   B   K   Q   B   N   R  \n",
+        "\n",
+        " P   P   P   .   P   P   P   P  \n",
+        "\n",
+        " .   .   .   .   .   .   .   .  \n",
+        "\n",
+        " .   .   .   P   .   .   .   .  \n",
+        "\n",
+        " .   .   .   N   .   .   .   .  \n",
+        "\n",
+        " .   .   .   .   .   n   .   .  \n",
+        "\n",
+        " p   p   p   .   p   p   p   p  \n",
+        "\n",
+        " r   n   b   k   q   b   .   r  \n",
+        "\n",
+        "\n",
+        "\n",
+        " R   .   B   K   Q   B   N   R  \n",
+        "\n",
+        " P   P   P   .   P   P   P   P  \n",
+        "\n",
+        " .   .   .   .   .   .   .   .  \n",
+        "\n",
+        " .   .   .   P   .   .   .   .  \n",
+        "\n",
+        " .   .   .   n   .   .   .   .  \n",
+        "\n",
+        " .   .   .   .   .   .   .   .  \n",
+        "\n",
+        " p   p   p   .   p   p   p   p  \n",
+        "\n",
+        " r   n   b   k   q   b   .   r  \n",
+        "\n",
+        "\n"
        ]
       }
      ],
