abstractified TDLearning algorithm for paramater flexibility, bug fixes in Board.py (fixed 50 move problem, added 3 position repeat support, Human input bug)

--- a/framework/antiscratch.ipynb
+++ b/framework/antiscratch.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:17648a1cfac5639a873444ced32a05fd3ab168300ae6ea691ae5a2b839f10e38"
+  "signature": "sha256:d11e924c549465f4be8cc93d97c7fabcefbaf0ea14a376a4e43db6beb61c016d"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -319,31 +319,12 @@
       "from AlphaBetaEngine import AlphaBeta\n",
       "\n",
       "for _ in range(20):\n",
-      "    gp = GamePlayer(Random(), AlphaBeta(), False)\n",
+      "    gp = GamePlayer(AlphaBeta(), AlphaBeta(), False)\n",
       "    gp.play_game()"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "WINNER:  Black\n",
-        "Number of moves:  21\n",
-        "WINNER: "
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        " Black\n",
-        "Number of moves:  64\n",
-        "WINNER: "
-       ]
-      }
-     ]
+     "outputs": []
     },
     {
      "cell_type": "code",
