--- a/framework/antiscratch.ipynb
+++ b/framework/antiscratch.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:f256f1dee051b7bd65794d4a0c6fa91355ce432d298201db27103875cd29d0d4"
+  "signature": "sha256:16bd8d2e7a63acb2cb353765614197d794f49570f2533fd6394cf79b1bb6cc96"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -437,6 +437,359 @@
       }
      ],
      "prompt_number": 11
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "from ForcedLineAlphaBetaEngine import ForcedLineAlphaBeta\n",
+      "from RandomEngine import Random\n",
+      "from GamePlayer import *\n",
+      "gp = GamePlayer(ForcedLineAlphaBeta(), Random())\n",
+      "gp.play_game()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "8 |  r   n   b   q   k   b   n   r  \n",
+        "  |\n",
+        "7 |  p   p   p   p   p   p   p   p  \n",
+        "  |\n",
+        "6 |  .   .   .   .   .   .   .   .  \n",
+        "  |\n",
+        "5 |  .   .   .   .   .   .   .   .  \n",
+        "  |\n",
+        "4 |  .   .   .   .   .   .   .   .  \n",
+        "  |\n",
+        "3 |  .   .   .   .   .   .   .   .  \n",
+        "  |\n",
+        "2 |  P   P   P   P   P   P   P   P  \n",
+        "  |\n",
+        "1 |  R   N   B   Q   K   B   N   R  \n",
+        "  |\n",
+        "  +---------------------------------\n",
+        "     A   B   C   D   E   F   G   H\n",
+        "\n",
+        "white evaluated "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " h2h3  to  19\n",
+        "Move:  1\n",
+        "White played the move  h2h3\n",
+        "\n",
+        "8 |  r   n   b   q   k   b   n   r  \n",
+        "  |\n",
+        "7 |  p   p   p   p   p   p   p   p  \n",
+        "  |\n",
+        "6 |  .   .   .   .   .   .   .   .  \n",
+        "  |\n",
+        "5 |  .   .   .   .   .   .   .   .  \n",
+        "  |\n",
+        "4 |  .   .   .   .   .   .   .   .  \n",
+        "  |\n",
+        "3 |  .   .   .   .   .   .   .   P  \n",
+        "  |\n",
+        "2 |  P   P   P   P   P   P   P   .  \n",
+        "  |\n",
+        "1 |  R   N   B   Q   K   B   N   R  \n",
+        "  |\n",
+        "  +---------------------------------\n",
+        "     A   B   C   D   E   F   G   H\n",
+        "\n",
+        "black evaluated  g7g6  to  0\n",
+        "Move:  1\n",
+        "Black played the move  g7g6\n",
+        "\n",
+        "8 |  r   n   b   q   k   b   n   r  \n",
+        "  |\n",
+        "7 |  p   p   p   p   p   p   .   p  \n",
+        "  |\n",
+        "6 |  .   .   .   .   .   .   p   .  \n",
+        "  |\n",
+        "5 |  .   .   .   .   .   .   .   .  \n",
+        "  |\n",
+        "4 |  .   .   .   .   .   .   .   .  \n",
+        "  |\n",
+        "3 |  .   .   .   .   .   .   .   P  \n",
+        "  |\n",
+        "2 |  P   P   P   P   P   P   P   .  \n",
+        "  |\n",
+        "1 |  R   N   B   Q   K   B   N   R  \n",
+        "  |\n",
+        "  +---------------------------------\n",
+        "     A   B   C   D   E   F   G   H\n",
+        "\n",
+        "white evaluated "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " h1h2  to  1\n",
+        "Move:  2\n",
+        "White played the move  h1h2\n",
+        "\n",
+        "8 |  r   n   b   q   k   b   n   r  \n",
+        "  |\n",
+        "7 |  p   p   p   p   p   p   .   p  \n",
+        "  |\n",
+        "6 |  .   .   .   .   .   .   p   .  \n",
+        "  |\n",
+        "5 |  .   .   .   .   .   .   .   .  \n",
+        "  |\n",
+        "4 |  .   .   .   .   .   .   .   .  \n",
+        "  |\n",
+        "3 |  .   .   .   .   .   .   .   P  \n",
+        "  |\n",
+        "2 |  P   P   P   P   P   P   P   R  \n",
+        "  |\n",
+        "1 |  R   N   B   Q   K   B   N   .  \n",
+        "  |\n",
+        "  +---------------------------------\n",
+        "     A   B   C   D   E   F   G   H\n",
+        "\n",
+        "black evaluated  h7h6  to  0\n",
+        "Move:  2\n",
+        "Black played the move  h7h6\n",
+        "\n",
+        "8 |  r   n   b   q   k   b   n   r  \n",
+        "  |\n",
+        "7 |  p   p   p   p   p   p   .   .  \n",
+        "  |\n",
+        "6 |  .   .   .   .   .   .   p   p  \n",
+        "  |\n",
+        "5 |  .   .   .   .   .   .   .   .  \n",
+        "  |\n",
+        "4 |  .   .   .   .   .   .   .   .  \n",
+        "  |\n",
+        "3 |  .   .   .   .   .   .   .   P  \n",
+        "  |\n",
+        "2 |  P   P   P   P   P   P   P   R  \n",
+        "  |\n",
+        "1 |  R   N   B   Q   K   B   N   .  \n",
+        "  |\n",
+        "  +---------------------------------\n",
+        "     A   B   C   D   E   F   G   H\n",
+        "\n",
+        "white evaluated "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " g1f3  to  2\n",
+        "Move:  3\n",
+        "White played the move  g1f3\n",
+        "\n",
+        "8 |  r   n   b   q   k   b   n   r  \n",
+        "  |\n",
+        "7 |  p   p   p   p   p   p   .   .  \n",
+        "  |\n",
+        "6 |  .   .   .   .   .   .   p   p  \n",
+        "  |\n",
+        "5 |  .   .   .   .   .   .   .   .  \n",
+        "  |\n",
+        "4 |  .   .   .   .   .   .   .   .  \n",
+        "  |\n",
+        "3 |  .   .   .   .   .   N   .   P  \n",
+        "  |\n",
+        "2 |  P   P   P   P   P   P   P   R  \n",
+        "  |\n",
+        "1 |  R   N   B   Q   K   B   .   .  \n",
+        "  |\n",
+        "  +---------------------------------\n",
+        "     A   B   C   D   E   F   G   H\n",
+        "\n",
+        "black evaluated  c7c6  to  0\n",
+        "Move:  3\n",
+        "Black played the move  c7c6\n",
+        "\n",
+        "8 |  r   n   b   q   k   b   n   r  \n",
+        "  |\n",
+        "7 |  p   p   .   p   p   p   .   .  \n",
+        "  |\n",
+        "6 |  .   .   p   .   .   .   p   p  \n",
+        "  |\n",
+        "5 |  .   .   .   .   .   .   .   .  \n",
+        "  |\n",
+        "4 |  .   .   .   .   .   .   .   .  \n",
+        "  |\n",
+        "3 |  .   .   .   .   .   N   .   P  \n",
+        "  |\n",
+        "2 |  P   P   P   P   P   P   P   R  \n",
+        "  |\n",
+        "1 |  R   N   B   Q   K   B   .   .  \n",
+        "  |\n",
+        "  +---------------------------------\n",
+        "     A   B   C   D   E   F   G   H\n",
+        "\n",
+        "white evaluated "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " f3g5  to  21\n",
+        "Move:  4\n",
+        "White played the move  f3g5\n",
+        "\n",
+        "8 |  r   n   b   q   k   b   n   r  \n",
+        "  |\n",
+        "7 |  p   p   .   p   p   p   .   .  \n",
+        "  |\n",
+        "6 |  .   .   p   .   .   .   p   p  \n",
+        "  |\n",
+        "5 |  .   .   .   .   .   .   N   .  \n",
+        "  |\n",
+        "4 |  .   .   .   .   .   .   .   .  \n",
+        "  |\n",
+        "3 |  .   .   .   .   .   .   .   P  \n",
+        "  |\n",
+        "2 |  P   P   P   P   P   P   P   R  \n",
+        "  |\n",
+        "1 |  R   N   B   Q   K   B   .   .  \n",
+        "  |\n",
+        "  +---------------------------------\n",
+        "     A   B   C   D   E   F   G   H\n",
+        "\n",
+        "black evaluated  h6g5  to  0\n",
+        "Move:  4\n",
+        "Black played the move  h6g5\n",
+        "\n",
+        "8 |  r   n   b   q   k   b   n   r  \n",
+        "  |\n",
+        "7 |  p   p   .   p   p   p   .   .  \n",
+        "  |\n",
+        "6 |  .   .   p   .   .   .   p   .  \n",
+        "  |\n",
+        "5 |  .   .   .   .   .   .   p   .  \n",
+        "  |\n",
+        "4 |  .   .   .   .   .   .   .   .  \n",
+        "  |\n",
+        "3 |  .   .   .   .   .   .   .   P  \n",
+        "  |\n",
+        "2 |  P   P   P   P   P   P   P   R  \n",
+        "  |\n",
+        "1 |  R   N   B   Q   K   B   .   .  \n",
+        "  |\n",
+        "  +---------------------------------\n",
+        "     A   B   C   D   E   F   G   H\n",
+        "\n",
+        "white evaluated "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " h3h4  to  21\n",
+        "Move:  5\n",
+        "White played the move  h3h4\n",
+        "\n",
+        "8 |  r   n   b   q   k   b   n   r  \n",
+        "  |\n",
+        "7 |  p   p   .   p   p   p   .   .  \n",
+        "  |\n",
+        "6 |  .   .   p   .   .   .   p   .  \n",
+        "  |\n",
+        "5 |  .   .   .   .   .   .   p   .  \n",
+        "  |\n",
+        "4 |  .   .   .   .   .   .   .   P  \n",
+        "  |\n",
+        "3 |  .   .   .   .   .   .   .   .  \n",
+        "  |\n",
+        "2 |  P   P   P   P   P   P   P   R  \n",
+        "  |\n",
+        "1 |  R   N   B   Q   K   B   .   .  \n",
+        "  |\n",
+        "  +---------------------------------\n",
+        "     A   B   C   D   E   F   G   H\n",
+        "\n",
+        "black evaluated  h8h4  to  0\n",
+        "Move:  5\n",
+        "Black played the move  h8h4\n",
+        "\n",
+        "8 |  r   n   b   q   k   b   n   .  \n",
+        "  |\n",
+        "7 |  p   p   .   p   p   p   .   .  \n",
+        "  |\n",
+        "6 |  .   .   p   .   .   .   p   .  \n",
+        "  |\n",
+        "5 |  .   .   .   .   .   .   p   .  \n",
+        "  |\n",
+        "4 |  .   .   .   .   .   .   .   r  \n",
+        "  |\n",
+        "3 |  .   .   .   .   .   .   .   .  \n",
+        "  |\n",
+        "2 |  P   P   P   P   P   P   P   R  \n",
+        "  |\n",
+        "1 |  R   N   B   Q   K   B   .   .  \n",
+        "  |\n",
+        "  +---------------------------------\n",
+        "     A   B   C   D   E   F   G   H\n",
+        "\n",
+        "white evaluated  h2h4  to  0\n",
+        "Move:  6\n",
+        "White played the move  h2h4\n",
+        "\n",
+        "8 |  r   n   b   q   k   b   n   .  \n",
+        "  |\n",
+        "7 |  p   p   .   p   p   p   .   .  \n",
+        "  |\n",
+        "6 |  .   .   p   .   .   .   p   .  \n",
+        "  |\n",
+        "5 |  .   .   .   .   .   .   p   .  \n",
+        "  |\n",
+        "4 |  .   .   .   .   .   .   .   R  \n",
+        "  |\n",
+        "3 |  .   .   .   .   .   .   .   .  \n",
+        "  |\n",
+        "2 |  P   P   P   P   P   P   P   .  \n",
+        "  |\n",
+        "1 |  R   N   B   Q   K   B   .   .  \n",
+        "  |\n",
+        "  +---------------------------------\n",
+        "     A   B   C   D   E   F   G   H\n",
+        "\n",
+        "black evaluated  g5h4  to  0\n",
+        "Move:  6\n",
+        "Black played the move  g5h4\n",
+        "\n",
+        "8 |  r   n   b   q   k   b   n   .  \n",
+        "  |\n",
+        "7 |  p   p   .   p   p   p   .   .  \n",
+        "  |\n",
+        "6 |  .   .   p   .   .   .   p   .  \n",
+        "  |\n",
+        "5 |  .   .   .   .   .   .   .   .  \n",
+        "  |\n",
+        "4 |  .   .   .   .   .   .   .   p  \n",
+        "  |\n",
+        "3 |  .   .   .   .   .   .   .   .  \n",
+        "  |\n",
+        "2 |  P   P   P   P   P   P   P   .  \n",
+        "  |\n",
+        "1 |  R   N   B   Q   K   B   .   .  \n",
+        "  |\n",
+        "  +---------------------------------\n",
+        "     A   B   C   D   E   F   G   H\n",
+        "\n",
+        "white evaluated "
+       ]
+      }
+     ]
     },
     {
      "cell_type": "code",
