changes to features to include legal moves for opp

--- a/framework/antiscratch.ipynb
+++ b/framework/antiscratch.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:16bd8d2e7a63acb2cb353765614197d794f49570f2533fd6394cf79b1bb6cc96"
+  "signature": "sha256:c5cfa83a3aaa9077eff35d63efcbee397a918308645196996b08b99cc604b524"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -790,6 +790,26 @@
        ]
       }
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "d = {0:1, 5:2, 2:2}\n",
+      "print sorted(d)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[0, 2, 5]\n"
+       ]
+      }
+     ],
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
