added full Memory engine (functional, but probably not optimal; it's doing strange things and losing to the regular FL engine). fixed bug that prevented games from finishing

--- a/framework/antiscratch.ipynb
+++ b/framework/antiscratch.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:c5cfa83a3aaa9077eff35d63efcbee397a918308645196996b08b99cc604b524"
+  "signature": "sha256:109426cf352579a3c756e00a08c36b6cfb8239865b5004e24c07892a70ce0407"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -810,6 +810,56 @@
       }
      ],
      "prompt_number": 1
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "x = \"if a $Noun $Verb a $Noun then the former $Verb the latter\"\n",
+      "print x.split()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "['if', 'a', '$Noun', '$Verb', 'a', '$Noun', 'then', 'the', 'former', '$Verb', 'the', 'latter']\n"
+       ]
+      }
+     ],
+     "prompt_number": 2
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "d1 = {'my pieces b': -0.02125041819023277, 'my pieces k': -0.003507709082639517, 'my pieces r': -0.01428200816896972, 'my pieces n': -0.02011169194370178, 'my pieces p': -0.04322280926858769, 'my pieces q': -0.015556494772511434, \\\n",
+      "          }\n",
+      "d2 = {'opponent pieces q': 0.0022495582659331757, 'opponent pieces p': 0.08043993630606892, 'opponent pieces r': 0.029582039415964725,  \\\n",
+      "         'opponent pieces b': 0.013231840410296025, 'opponent pieces n': 0.027705901416900165, 'opponent pieces k': 0.02553393365138097}        \n",
+      "def normalize(d):\n",
+      "    vals = [d[key] for key in d]\n",
+      "    min_val = min([abs(val) for val in vals])\n",
+      "    print {key:d[key]/min_val for key in d}\n",
+      "    \n",
+      "normalize(d1)\n",
+      "normalize(d2)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "{'my pieces b': -6.05820428364659, 'my pieces k': -1.0, 'my pieces n': -5.7335689676316965, 'my pieces p': -12.322233187041538, 'my pieces q': -4.434944405596294, 'my pieces r': -4.071605664122707}\n",
+        "{'opponent pieces q': 1.0, 'opponent pieces p': 35.75810305704633, 'opponent pieces r': 13.15015479436507, 'opponent pieces b': 5.881972745794656, 'opponent pieces n': 12.316151947016598, 'opponent pieces k': 11.350643385442087}\n"
+       ]
+      }
+     ],
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
